2002-10-25  Maciej Stachowiak  <mjs@apple.com>

	- fixed 3048031 - innerHTML is incorrectly null
	
        * kwq/KWQString.mm:
        (QString::isNull): Check for NULL by comparing to
	shared_null_handle instead of checking for 0 length, so
	garden-variety empty strings don't show as NULL.
        (QString::QString): Make sure that string created with a NULL char
	* uses the shared null handle, so it's properly NULL.

2002-10-24  Richard Williamson   <rjw@apple.com>

        Updated to reflect new calling parameter semantic of floatCharacterWidths(),
        which now returns the entire array of widths up the last character requested.
        
        * khtml/rendering/render_text.cpp:
        (TextSlave::checkSelectionPoint):

2002-10-24  David Hyatt  <hyatt@apple.com>

	<pre>, <xmp> and <plaintext> should all have a top margin of 1em.
	Fixes a bunch of sites that use <pre>.
	
        * khtml/css/html4.css:

2002-10-24  Chris Blumenberg  <cblu@apple.com>

	Removed didAddSubview calls because that can easily be done in WebKit. Duh!

        * khtml/rendering/render_frames.cpp:
        (RenderPart::setWidget):
        * kwq/KWQKHTMLPartImpl.h:
        * kwq/KWQKHTMLPartImpl.mm:
        * kwq/KWQKJavaAppletWidget.mm:
        (KJavaAppletWidget::showApplet):
        * kwq/WebCoreBridge.h:

2002-10-24  Darin Adler  <darin@apple.com>

	A step in the direction of making KWQ headers much nicer.
	Move all empty headers out of kwq, and into ForwardingHeaders.

        * ForwardingHeaders/kcmdlineargs.h: Added.
        * ForwardingHeaders/kdatastream.h: Added.
        * ForwardingHeaders/khtml_iface.h: Added.
        * ForwardingHeaders/khtml_printsettings.h: Added.
        * ForwardingHeaders/khtml_run.h: Added.
        * ForwardingHeaders/kio/kprinter.h: Added.
        * ForwardingHeaders/kio/kprotocolmanager.h:
        * ForwardingHeaders/kio/ktrader.h: Added.
        * ForwardingHeaders/kio/scheduler.h: Added.
        * ForwardingHeaders/kmultipledrag.h: Added.